# mission-to-mars

./: Procfile  README.md  docker-compose.yml  houston.py  mission_to_mars.py  pullrequest.txt  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
Missions_to_Mars/: houston.py  mission_to_mars.py
Missions_to_Mars/templates/: earth.html
ipynb/: mission_to_mars.ipynb
templates/: earth.html
